--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "next-mdx-remote": "^4.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-katex": "^6.0.2",
+    "remark-breaks": "^3.0.2",
+    "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
     "typescript": "4.9.5"
   }
 }
