--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "remark-breaks": "^3.0.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
+    "sass": "^1.58.3",
     "typescript": "4.9.5"
   }
 }
