--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "remark-math": "^5.1.1",
     "sass": "^1.58.3",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.4",
+    "prettier-plugin-md-nocjsp": "^1.5.1"
   }
 }
