--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "postinstall": "husky install",
-    "dev": "next dev",
+    "dev": "node server.js",
     "export": "next export",
     "build": "next build",
     "start": "next start",
