--- a/package.json
+++ b/package.json
@@ -13,25 +13,26 @@
     "format": "prettier --write src"
   },
   "dependencies": {
-    "@next/font": "13.1.6",
-    "@types/node": "18.13.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6",
+    "@next/font": "^13.1.6",
+    "@types/node": "^18.13.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.10",
+    "eslint": "^8.34.0",
+    "eslint-config-next": "^13.1.6",
     "gray-matter": "^4.0.3",
-    "next": "13.1.6",
-    "next-mdx-remote": "^4.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.5.4",
+    "next-mdx-remote": "^4.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rehype-katex": "^6.0.2",
     "remark-breaks": "^3.0.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "sass": "^1.58.3",
-    "typescript": "4.9.5"
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
+    "express": "^4.18.2",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
     "pinst": "^3.0.0",
