build: cache files in deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,11 @@ jobs:
       - name: Cache packages in node_modules
         uses: actions/cache@v3
         with:
-          path: node_modules
-          key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
+          path: |
+            ./node_modules
+            ./.next/cache
+            ~/.cache/yarn
+          key: ${{ runner.OS }}-node-${{ github.sha }}
           restore-keys: |
             ${{ runner.OS }}-node-
 
