--- a/package.json
+++ b/package.json
@@ -1,46 +1,22 @@
 {
   "name": "ja1zlo.u-tokyo.org",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "postinstall": "husky install",
-    "dev": "node server.js",
-    "export": "next export",
-    "build": "next build",
-    "start": "next start",
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro check && astro build",
+    "preview": "astro preview",
+    "astro": "astro",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
     "format": "prettier --write src"
   },
   "dependencies": {
-    "@next/font": "^13.1.6",
-    "@types/node": "^18.13.0",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.10",
-    "eslint": "^8.34.0",
-    "eslint-config-next": "^13.1.6",
-    "gray-matter": "^4.0.3",
-    "next": "^13.5.4",
-    "next-mdx-remote": "^4.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rehype-katex": "^6.0.2",
-    "remark-breaks": "^3.0.2",
-    "remark-gfm": "^3.0.1",
-    "remark-math": "^5.1.1",
-    "sass": "^1.58.3",
-    "typescript": "^4.9.5"
-  },
-  "devDependencies": {
-    "express": "^4.18.2",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.1.2",
-    "pinst": "^3.0.0",
-    "prettier": "^2.8.4",
-    "prettier-plugin-md-nocjsp": "^1.5.1"
-  },
-  "resolutions": {
-    "@types/react": "^18.0.28"
+    "@astrojs/check": "^0.6.0",
+    "astro": "^4.8.3",
+    "typescript": "^5.4.5"
   },
   "husky": {
     "hooks": {
