--- a/package.json
+++ b/package.json
@@ -31,5 +31,12 @@
     "*.{md,mdx}": [
       "prettier --write"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^7.9.0",
+    "eslint": "^9.2.0",
+    "eslint-plugin-astro": "^1.2.0",
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0"
   }
 }
