--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.6.0",
+    "@astrojs/mdx": "^3.0.0",
     "astro": "^4.8.3",
     "typescript": "^5.4.5"
   },
