feat: migrate pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ja1zlo.u-tokyo.org",
   "version": "0.2.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "astro dev",
@@ -40,6 +41,7 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
-    "prettier-plugin-astro": "^0.13.0"
+    "prettier-plugin-astro": "^0.13.0",
+    "sass": "^1.77.1"
   }
 }
