--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/check": "^0.6.0",
     "@astrojs/mdx": "^3.0.0",
     "astro": "^4.8.3",
+    "sharp": "^0.33.3",
     "typescript": "^5.4.5"
   },
   "husky": {
