build: specify precommit prettier target dir

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "lint-staged": {
     "*": [
       "eslint --fix",
-      "prettier --write"
+      "prettier src --write"
     ]
   },
   "devDependencies": {
